stderr
Traceback (most recent call last):
  File "/usr/local/lib/python3.12/unittest/__main__.py", line 18, in <module>
    main(module=None)
  File "/usr/local/lib/python3.12/unittest/main.py", line 104, in __init__
    self.parseArgs(argv)
  File "/usr/local/lib/python3.12/unittest/main.py", line 153, in parseArgs
    self.createTests()
  File "/usr/local/lib/python3.12/unittest/main.py", line 164, in createTests
    self.test = self.testLoader.loadTestsFromNames(self.testNames,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/unittest/loader.py", line 207, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.12/unittest/loader.py", line 137, in loadTestsFromName
    module = __import__(module_name)
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "/sandbox/test_numbers.py", line 1, in <module>
    from numbers import Numbers
  File "/sandbox/numbers.py", line 18
    return self.to_number(int(digit)) for digit in str(number)
                                      ^^^
SyntaxError: invalid syntax
